# Polaris

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FACTS.md  HANDOFF.md  IDENTITY.md  INSTALL.md  LICENSE  MANIFEST.in  NOTICE  README.md  ROADMAP.md  SKILL.md  START_HERE.md  USER.md  pyproject.toml  trajectory-proof.ps1
adapters/: mcp_polaris
agents/: openai.yaml
archive/: INDEX.md  RECEIPTS.md
artifacts/: README.md  cabinet-12cell-manifest.md
community/: README.md
configs/: blender-bridge-example.json  desktop-bridge-example.json
docs/: implementation-history.md  shadow-v0-plan.md  trialogue-v2-spec.md  trialogue-v3-level2-plan.md
eval/: __init__.py  _phase1b_cases.txt  bench_scale.py  case_generator.py  evidence_writer.py  fixtures_manifest.py  hermetic.py  metrics.py  orchestrator.py  smoke_one.py
experience-packs-v4-candidates/: README.md
polaris/: __init__.py  cli.py  community.py  paths.py  schema.py  supporter.py  validator.py
prompts/: codex-blender-desktop-agent-formal.txt
references/: adapters.md  architecture.md  live-status.md  orchestrator.md  platform0-claude-five-layer-learning-and-token-risk-assessment-2026-03-15.md  platform0-claude-positioning-and-learning-assessment-2026-03-15.md  platform0-phase3-5-execution-plan.md  platform0-stage-cognition-index-2026-03-15.md  platform2-plan.md  platform2-rework-plan.md  platformization-phase0.md  repair-actions.md
scripts/: add_fix_commands.py  author_fixtures.py  candidate_harvester.py  candidate_report.py  canonicalize_candidates.py  fix_repros.py  generate_cursor_queue.py  pattern_schema.py  (+66 more)
(+3423 files in other folders)
