[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-mcp"
version = "0.2.2"
description = "Local MCP memory layer for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=0.9.0",
  "platformdirs>=4.2.0",
  "requests>=2.31.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=1.0.0",
]

[project.scripts]
polaris = "polaris.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["polaris*"]

[tool.setuptools.package-data]
polaris = [
  "packs/**/*.json",
  "packs/**/*.md",
]
